# oxideterm-sync

./: .gitignore  CONTRIBUTING.md  LICENSE  PLUGIN_DEVELOPMENT.md  README.fr.md  README.md  README.old.md  README.zh-CN.md  SECURITY.md  package.json  plugin-api.d.ts  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  deploy-website.yml  labeler.yml
agent/: Cargo.toml
agent/src/: fs_ops.rs  main.rs  protocol.rs  symbols.rs  watcher.rs
cli/: Cargo.toml
cli/src/: connect.rs  main.rs  output.rs  terminal.rs
docs/: DEVELOPMENT.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM.md  plugin-api.d.ts
docs/changelog/: 2026-02.md
docs/readme/: README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.pt-BR.md  README.vi.md  README.zh-CN.md  README.zh-Hans.md  README.zh-Hant.md
docs/reference/: AICHAT.md  ARCHITECTURE.md  CONNECTION_POOL.md  CUSTOM_THEMES.md  ENV_DETECTOR.md  GRAPHICS_FORWARDING.zh-CN.md  I18N.md  IDE_MODE.md  LOCAL_TERMINAL.md  NETWORK_TOPOLOGY.md  OXIDETERM_CORE_REFERENCE.md  OXIDE_NEXT_ARCHITECTURE.md  PERSISTENCE.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM.md  PORT_FORWARDING.md  PROTOCOL.md  RAG_SYSTEM.md  RECONNECT_ORCHESTRATOR_PLAN.md  REMOTE_AGENT.md  RESOURCE_PROFILER.md  SERIALIZATION.md  SFTP.md  SSH_AGENT_STATUS.md  SYSTEM_INVARIANTS.md  TERMINAL_SEARCH.md  USER_GUIDE.md  VSCODE_COMPAT_IDE_PLAN.md  knownissues.md  plugin-api.d.ts
scripts/: bump-version.cjs  local-verify.cjs  project-stats.cjs  release-notes.cjs
src/: App.tsx  THIRD_PARTY_NOTICES.md  main.tsx  styles.css
src-tauri/: Cargo.toml  THIRD_PARTY_NOTICES.md  deny.toml  tauri.conf.json  tauri.conf.local.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  terminal_bg.rs  update_manager.rs
src-tauri/src/agent/: deploy.rs  registry.rs  transport.rs
src-tauri/src/bridge/: mod.rs  server.rs
src-tauri/src/cli_server/: handler.rs  methods.rs  mod.rs  transport.rs
src-tauri/src/commands/: agent_history.rs  ai_chat.rs  ai_http.rs  appearance.rs  archive.rs  cli.rs  config.rs  connect_v2.rs  forwarding.rs  health.rs  ide.rs  kbi.rs  local.rs  mcp.rs  mod.rs  node_agent.rs  node_forwarding.rs  node_sftp.rs  oxide_export.rs  oxide_import.rs  rag.rs  session_tree.rs  ssh.rs  sync.rs
src-tauri/src/config/: keychain.rs  mod.rs  ssh_config.rs  storage.rs  touch_id.rs  types.rs  vault.rs
src-tauri/src/forwarding/: dynamic.rs  local.rs  manager.rs  mod.rs  remote.rs
src-tauri/src/graphics/: bridge.rs  commands.rs  mod.rs  wsl.rs
src-tauri/src/launcher/: macos.rs
src-tauri/src/local/: mod.rs  pty.rs  registry.rs
src-tauri/src/oxide_file/: crypto.rs  format.rs
src-tauri/src/rag/: bm25.rs  chunker.rs  embedding.rs  error.rs  hnsw.rs  mod.rs  search.rs  store.rs  types.rs
src-tauri/src/router/: emitter.rs  mod.rs  sequencer.rs  types.rs
src-tauri/src/session/: auth.rs  auto_reconnect.rs  env_detector.rs  health.rs  mod.rs  profiler.rs  reconnect.rs  registry.rs  scroll_buffer.rs  search.rs  topology_graph.rs  tree.rs
src-tauri/src/sftp/: mod.rs  session.rs  tar_transfer.rs  transfer.rs  types.rs
src-tauri/src/ssh/: agent.rs  auth.rs  client.rs  config.rs  connection_registry.rs  error.rs  handle_owner.rs  keyboard_interactive.rs  known_hosts.rs  mod.rs  preflight.rs  proxy.rs  proxy_integration_tests.rs  session.rs
src-tauri/src/state/: agent_history.rs  ai_chat.rs
src/components/: ErrorBoundary.tsx
src/components/ai/: AiChatPanel.tsx  ChatInput.tsx  ChatMessage.tsx  ContextIndicator.tsx  ModelSelector.tsx  ToolCallBlock.tsx
src/components/command-palette/: CommandPalette.tsx
src/components/connections/: ConnectionsPanel.tsx
src/components/fileManager/: LocalFileManager.tsx  QuickLook.tsx
src/components/forwards/: ForwardsView.tsx
src/components/ide/: IdeSearchPanel.tsx  IdeStatusBar.tsx  IdeWorkspace.tsx
src/components/layout/: AppLayout.tsx  EventLogPanel.tsx  Sidebar.tsx  TabBar.tsx  UpdateNotification.tsx
src/components/local/: LocalShellLauncher.tsx
src/components/modals/: EditConnectionModal.tsx  NewConnectionModal.tsx  OnboardingModal.tsx  SavePathAsPresetDialog.tsx
src/components/plugin/: PluginManagerView.tsx
src/components/sessionManager/: BatchActionsMenu.tsx
src/components/sessions/: Breadcrumb.tsx  SessionTree.tsx
src/components/settings/: DocumentManager.tsx  KeybindingEditorSection.tsx  McpServersPanel.tsx  SettingsView.tsx  ThemeEditorModal.tsx
src/components/sftp/: SFTPView.tsx  TransferQueue.tsx  sftpViewHelpers.ts
src/components/terminal/: AiInlinePanel.tsx  LocalTerminalView.tsx  SplitTerminalContainer.tsx  TerminalView.tsx
src/components/topology/: TopologyDialog.tsx
src/components/ui/: button.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  separator.tsx  tabs.tsx  toast.tsx  tooltip.tsx
src/hooks/: useAdaptiveRenderer.ts  useCliEvents.ts  useConfirm.tsx  useConnectionEvents.ts  useKeybindingDispatcher.ts  useNodeState.ts  useSplitPaneShortcuts.ts  useTerminalKeyboard.ts  useTerminalSmartCopy.ts
src/lib/: agentService.ts  api.ts  autoSyncService.ts  clipboardSupport.ts  dataRefreshService.ts  keybindingRegistry.ts  sftpContextRegistry.ts  shortcuts.ts  sidebarContextProvider.ts  testConnectionRequest.ts  themes.ts
src/lib/ai/: agentOrchestrator.ts  constants.ts  providers.ts  tokenUtils.ts
src/lib/plugin/: pluginContextFactory.ts  pluginEventBridge.ts  pluginLoader.ts
src/locales/de/: ai.json  common.json  sessions.json  settings_view.json  sftp.json
src/locales/en/: ai.json  common.json  sessions.json  settings_view.json  sftp.json
src/locales/es-ES/: ai.json  (+4 more)
src/store/: aiChatStore.ts  appStore.ts  commandPaletteStore.ts  ideStore.ts  ragStore.ts  reconnectOrchestratorStore.ts  sessionTreeStore.ts  settingsStore.ts  updateStore.ts
src/test/: setup.ts
src/types/: index.ts  plugin.ts
website/: 404.html  README.md  index.html  robots.txt  sitemap.xml  styles.css
(+82 files in other folders)
