[package]
name = "oxideterm-agent"
version = "0.12.1"
description = "Lightweight remote agent for OxideTerm IDE mode"
authors = ["OxideTerm Team"]
license = "GPL-3.0-only"
edition = "2021"
default-run = "oxideterm-agent"

[[bin]]
name = "oxideterm-agent"
path = "src/main.rs"

[dependencies]
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-perl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = { version = "0.13", default-features = false }

# inotify for Linux file watching (lightweight, ~20KB)
[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.11", default-features = false }
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"            # Optimize for size
