[package]
name = "oxide-cli"
version = "1.0.10"
edition = "2021"
description = "CLI companion for OxideTerm"
authors = ["OxideTerm Team"]
license = "GPL-3.0-only"

[[bin]]
name = "oxt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
termimad = "0.30"
tungstenite = { version = "0.24", features = ["handshake"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
whoami = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"
