[package]
name = "oxideterm"
version = "0.15.3"
description = "A modern SSH terminal client built with Rust and Tauri"
authors = ["OxideTerm Team"]
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oxideterm_lib"
crate-type = ["rlib"]

[features]
default = ["local-terminal", "wsl-graphics"]
# Local terminal support (PTY) - disable for mobile builds
local-terminal = ["dep:portable-pty"]
# WSL Graphics forwarding (Windows only) - VNC-based WSLg display
wsl-graphics = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-dialog = "2.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# High-performance memory allocator
# 减少高频小块分配的内存碎片，降低延迟抖动
mimalloc = "0.1"

# Async Runtime - 精简 features，移除不需要的 fs, signal 等
# full = rt-multi-thread + io-util + io-std + net + time + process + macros + sync + signal + fs + tracing + parking_lot
# 我们需要：rt-multi-thread(spawn), net(TcpListener), sync(mpsc/RwLock), time(timeout/sleep), macros(select!)
# process: needed by wsl-graphics for Child/Command on Windows
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util", "process"] }

# SSH Protocol
russh = { version = "0.54", default-features = false, features = ["ring"] }
russh-sftp = "2"

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Binary Protocol
bytes = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
async-trait = "0.1"

# Local Terminal (PTY) - optional, gated behind 'local-terminal' feature
portable-pty = { version = "0.8", optional = true }

# Session Management
dashmap = "6"
dirs = "6"

# Config & Keychain
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
whoami = "1"
hostname = "0.4"

# SFTP
base64 = "0.22"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
glob = "0.3"
tauri-plugin-fs = "2.4.5"

# Encoding Detection & Conversion
encoding_rs = "0.8"
chardetng = "0.1"

# Archive (compression/extraction)
zip = { version = "2.0", default-features = false, features = ["deflate", "time"] }
walkdir = "2"
tar = "0.4"

# File type detection (magic bytes)
infer = "0.16"
md-5 = "0.10"

# Audio metadata (ID3, Vorbis, FLAC, etc.)
lofty = { version = "0.22", default-features = false }

# macOS app launcher (Info.plist parsing)
plist = "1"

# Image processing (background image validation, resize, WebP conversion)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# System info (disk/volume detection)
sysinfo = { version = "0.33", default-features = false, features = ["disk", "system"] }

# Window vibrancy (native frosted glass effect)
window-vibrancy = "0.6"

# HTTP client (plugin registry)
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# Persistence Layer
redb = "2.1"
rmp-serde = "1"

# Compression (for AI chat buffer snapshots)
zstd = "0.13"

# Encryption & Security
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", default-features = false, features = ["std"] }
sha2 = "0.10"
zeroize = "1.7"
rand = "0.8"
subtle = "2.5"  # Constant-time comparison for security tokens

# Terminal & Search
vte = "0.14"
regex = "1.10"
strip-ansi-escapes = "0.2"
flate2 = "1.1.9"

# macOS Touch ID authentication (LAContext via LocalAuthentication.framework)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSError", "NSString"] }
block2 = "0.6"

# Unix process group management (for PTY cleanup)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

# Windows-specific dependencies (winmm via raw FFI in lib.rs, no crate needed)

[dev-dependencies]
tempfile = "3"

[profile.release]
# 1. 链接时优化 (LTO)
# 改用 "thin" 是明智的，它能解决 macOS 签名丢失问题，同时保持 99% 的性能
lto = "thin"

# 2. 代码生成单元 (Codegen Units)
# 设置为 1 意味着不并行编译，虽然慢，但能让 Thin LTO 实现最高程度的内联优化
# 这能弥补从 "fat" 降级到 "thin" 带来的微小性能损失
codegen-units = 1

# 3. 符号清理 (Strip)
# 建议在生产环境开启。它能剔除调试符号，显著减小体积（通常能缩减 20% 以上）
# 且不会影响运行逻辑。如果担心签名，可以在打包脚本中由 Tauri 处理，或在这里设为 true
strip = true

# 4. 恐慌策略 (Panic Strategy)
# 异步应用必备。直接中止进程而不是展开堆栈，减小体积且逻辑更清晰
panic = "abort"

# 5. 优化等级 (Optimization Level)
# 保持 3 以获得最快运行速度
opt-level = 3

# 6. 额外性能建议 (可选)
# 开启性能探测，针对当前 CPU 指令集优化（如果不需要分发给旧设备）
# rustflags = ["-C", "target-cpu=native"]
